--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,7 +64,7 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Research Interests</h2>
               <p>
-                My research interests lie in multimodal ML and embodied AI.
+                My research interests lie in multimodal ML and embodied AI. My current goal is to harness perception and language understanding to create intelligent agents that interact with and understand the world in a human-like manner.
               </p>
             </td>
           </tr>
