--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,12 +37,14 @@
               <!-- <p>
                 <b>Emails: </b> chhablani.gunjan (at) gmail.com, gchhablani (at) gatech.edu
               </p> -->
-              <p>I am a second-year Master's student at the <a href="https://www.gatech.edu/">Georgia Tech</a>, advised by <a href="https://faculty.cc.gatech.edu/~dbatra/">Dhruv Batra</a>. I currently maintain <a href="https://eval.ai">EvalAI</a> and work on Embodied AI.              </p>
               <p>
-                From 2020 to 2022, I worked at <a href="https://www.oracle.com/">Oracle</a>, as a developer and a Machine Learning Engineer as part of <a href="https://www.oracle.com/artificial-intelligence/language/">the OCI language team</a>. I primarily designed pipelines for training and evaluating language models.
+                Hello! I am a second-year Master's student at <a href="https://www.gatech.edu/">Georgia Tech</a>, under the guidance of <a href="https://faculty.cc.gatech.edu/~dbatra/">Dhruv Batra</a>. My current focus revolves around maintaining <a href="https://eval.ai">EvalAI</a> and contributing to the field of on Embodied AI.
               </p>
               <p>
-                I have a Bachelor's in Computer Science from <a href="https://www.bits-pilani.ac.in/goa/">BITS Goa</a>, where I ranked 3<sup>rd</sup> in my batch.
+                Previously, I spent two years, from 2020 to 2022, at <a href="https://www.oracle.com/">Oracle</a>, where I wore multiple hats as a developer and a Machine Learning Engineer within the <a href="https://www.oracle.com/artificial-intelligence/language/">the OCI language team</a>. My main responsibilities revolved around designing and managing pipelines for training and evaluating language models.
+              </p>
+              <p>
+                I hold a Bachelor's in Computer Science from <a href="https://www.bits-pilani.ac.in/goa/">BITS Goa</a>, where I proudly secured the 3<sup>rd</sup> rank in my graduating class.
               </p>
               <p style="text-align:center">
                 <!-- <a href="mailto:gchhablani@gatech.edu">Work Email</a> &nbsp;/&nbsp; -->
