--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
                 <b>Emails: </b> chhablani.gunjan (at) gmail.com, gchhablani (at) gatech.edu
               </p> -->
               <p>
-                Hello! I am a second-year Master's student at <a href="https://www.gatech.edu/">Georgia Tech</a>, under the guidance of <a href="https://faculty.cc.gatech.edu/~dbatra/">Dhruv Batra</a>. My current focus revolves around maintaining <a href="https://eval.ai">EvalAI</a> and contributing to the field of on Embodied AI.
+                Hello! I am a second-year Master's student at <a href="https://www.gatech.edu/">Georgia Tech</a>, under the guidance of <a href="https://faculty.cc.gatech.edu/~dbatra/">Dhruv Batra</a>. My current focus revolves around maintaining <a href="https://eval.ai">EvalAI</a> and contributing to the field of Embodied AI.
               </p>
               <p>
                 Previously, I spent two years, from 2020 to 2022, at <a href="https://www.oracle.com/">Oracle</a>, where I wore multiple hats as a developer and a Machine Learning Engineer within the <a href="https://www.oracle.com/artificial-intelligence/language/">the OCI language team</a>. My main responsibilities revolved around designing and managing pipelines for training and evaluating language models.
