--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,8 +38,12 @@
                 <b>Emails: </b> chhablani.gunjan (at) gmail.com, gchhablani (at) gatech.edu
               </p> -->
               <p>
-                Hello! I am a second-year Master's student at <a href="https://www.gatech.edu/">Georgia Tech</a>, under the guidance of <a href="https://faculty.cc.gatech.edu/~dbatra/">Dhruv Batra</a>. My current focus revolves around maintaining <a href="https://eval.ai">EvalAI</a> and contributing to the field of Embodied AI.
+                Hello! I am a second-year Master's student at <a href="https://www.gatech.edu/">Georgia Tech</a>, co-advised by <a href="https://faculty.cc.gatech.edu/~dbatra/">Dhruv Batra</a> and <a href="https://faculty.cc.gatech.edu/~zk15/">Zsolt Kira</a>. My current research focusses towards building more realistic embodied agents by:
+                <ul>
+                  <li>making existing embodied tasks more realistic.</li>
+                  <li>and bringing real scenes into simulation.</li>
               </p>
+              <p>I have also been proudly maintaining <a href="https://eval.ai">EvalAI for the last two years and have been a GSoC'23/GSoC'24 mentor.</a></p>
               <p>
                 Previously, I spent two years, from 2020 to 2022, at <a href="https://www.oracle.com/">Oracle</a>, where I wore multiple hats as a developer and a Machine Learning Engineer within the <a href="https://www.oracle.com/artificial-intelligence/language/">the OCI language team</a>. My main responsibilities revolved around designing and managing pipelines for training and evaluating language models.
               </p>
