--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,7 +70,8 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Research Interests</h2>
               <p>
-                My research interests lie in multimodal ML and embodied AI. My current goal is to harness perception and language understanding to create intelligent agents that interact with and understand the world in a human-like manner.
+                Previous, I have dabbled in various fields in AI, including vision, NLP and embodied AI. 
+                My current goals are to harness transformers to create intelligent agents that work well on realistic navigation tasks, and use 3D scene reconstruction techniques to quickly bring real scenes to simulation.
               </p>
             </td>
           </tr>
