--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,10 +38,11 @@
                 <b>Emails: </b> chhablani.gunjan (at) gmail.com, gchhablani (at) gatech.edu
               </p> -->
               <p>
-                Hello! I am a second-year Master's student at <a href="https://www.gatech.edu/">Georgia Tech</a>, co-advised by <a href="https://faculty.cc.gatech.edu/~dbatra/">Dhruv Batra</a> and <a href="https://faculty.cc.gatech.edu/~zk15/">Zsolt Kira</a>. My current research focusses towards building more realistic embodied agents by:
+                Hello! I am a second-year Master's student at <a href="https://www.gatech.edu/">Georgia Tech</a>, co-advised by <a href="https://faculty.cc.gatech.edu/~dbatra/">Dhruv Batra</a> and <a href="https://faculty.cc.gatech.edu/~zk15/">Zsolt Kira</a>. <br> My current research focusses towards building more realistic embodied agents by:
                 <ul>
                   <li>making existing embodied tasks more realistic.</li>
                   <li>and bringing real scenes into simulation.</li>
+                </ul>
               </p>
               <p>I have also been proudly maintaining <a href="https://eval.ai">EvalAI for the last two years and have been a GSoC'23/GSoC'24 mentor.</a></p>
               <p>
