--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
                   <li>and bringing real scenes into simulation.</li>
                 </ul>
               </p>
-              <p>I have also been proudly maintaining <a href="https://eval.ai">EvalAI for the last two years and have been a GSoC'23/GSoC'24 mentor.</a></p>
+              <p>I have also been proudly maintaining <a href="https://eval.ai">EvalAI</a> for the last two years and have been a GSoC'23/GSoC'24 mentor.</p>
               <p>
                 Previously, I spent two years, from 2020 to 2022, at <a href="https://www.oracle.com/">Oracle</a>, where I wore multiple hats as a developer and a Machine Learning Engineer within the <a href="https://www.oracle.com/artificial-intelligence/language/">the OCI language team</a>. My main responsibilities revolved around designing and managing pipelines for training and evaluating language models.
               </p>
