--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,7 @@
                 Hello! I am a second-year Master's student at <a href="https://www.gatech.edu/">Georgia Tech</a>, co-advised by <a href="https://faculty.cc.gatech.edu/~dbatra/">Dhruv Batra</a> and <a href="https://faculty.cc.gatech.edu/~zk15/">Zsolt Kira</a>. <br> My current research focuses on building more realistic embodied agents by:
                 <ul>
                   <li>making existing embodied tasks more realistic.</li>
+                  <li>building agents that can solve such tasks.</li>
                   <li>and bringing real scenes into simulation.</li>
                 </ul>
               </p>
