Update research focus

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
                 <ul>
                   <li>making existing embodied tasks more realistic.</li>
                   <li>building agents that can solve such tasks.</li>
-                  <li>and bringing real scenes into simulation.</li>
+                  <li>and bringing real-life scenes into simulation.</li>
                 </ul>
               </p>
               <p>I also maintain <a href="https://eval.ai">EvalAI</a> and have been a GSoC'23/GSoC'24 mentor at CloudCV.</p>
